Frilufts-side fikset!
Yey!

--- a/idrettsfag/index.html
+++ b/idrettsfag/index.html
@@ -42,7 +42,7 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../programfag/friluftsliv/" class="fag_i_meny">
                     <img src="../assets/imgs/friluftsliv/Tur-i-fjell-mye-sol.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Friluftsliv</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
