Glemte å bytte ut tilbake-knapp
Nå er det fikset :)

--- a/programfag/friluftsliv/index.html
+++ b/programfag/friluftsliv/index.html
@@ -14,8 +14,8 @@
         <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i kjemi.css-dokumentet -->
         <div id="forside-bilde">
             <h1>Friluftsliv</h1>
-            <!-- knapp tilbake til realfagssiden -->
-            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <!-- knapp tilbake til idrettsfagssiden -->
+            <a href="../../idrettsfag/" id="tilbake-knapp">&lt; Tilbake til idrettsfag</a>
         </div>
     </header>
     <main>
