Fikset bilder psykologi og pom

--- a/programfag/pom/index.html
+++ b/programfag/pom/index.html
@@ -71,8 +71,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/" alt="PLaceholder">
-                    <img src="../../assets/imgs/" alt="Placeholder">
+                    <img src="../../assets/imgs/pom/barn-human-rights.png" alt="Barn human rights">
+                    <img src="../../assets/imgs/pom/fengsel-johannesburg.png" alt="Fengsel Johannesburg">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
