--- a/programfag/psykologi/index.html
+++ b/programfag/psykologi/index.html
@@ -82,8 +82,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="PLaceholder">
-                    <img src="../../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/psykologi/emojies-forskjellige-følelser.png" alt="emojies forskjellige følelser">
+                    <img src="../../assets/imgs/psykologi/hjerne-av-ord.png" alt="Hjerne av ord">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -150,8 +150,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="Placeholder">
-                    <img src="../../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/psykologi/syk-person-hjemme.png" alt="Syk person hjemme">
+                    <img src="../../assets/imgs/psykologi/to-personer-av-ord.png" alt="To personer lagd av ord">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
