Fikset bilder samfunnsgeografi og rettslære

--- a/programfag/rettslære/index.html
+++ b/programfag/rettslære/index.html
@@ -68,8 +68,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/rettslære/bok_norges_lover.jpg" alt="PLaceholder">
-                    <img src="../../assets/imgs/rettslære/placeholder_rettslære.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/rettslære/bok_norges_lover.jpg" alt="Norges lover bok">
+                    <img src="../../assets/imgs/rettslære/dommer-hammer.png" alt="Dommer-hammer">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
