--- a/programfag/samfunnsgeografi/index.html
+++ b/programfag/samfunnsgeografi/index.html
@@ -67,8 +67,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="PLaceholder">
-                    <img src="../../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="Placeholder">
+                    <img src="../../assets/imgs/samfunnsgeografi/ødelagt-hus-etter-tornado.png" alt="Ødelagt hus etter tornado">
+                    <img src="../../assets/imgs/samfunnsgeografi/pin-på-kart.png" alt="Nål på kart">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
