Fikset feg-menyen enda en gang og la til et bilde

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -93,7 +93,7 @@
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/samfunnsøkonomi/" class="fag_i_meny">
-                    <img src="../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/samfunnsøkonomi/graf-aksjer.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Samfunnsøkonomi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -223,7 +223,7 @@
                 <img src="../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" class="fag-bilde">
+                <img src="../assets/imgs/samfunnsøkonomi/graf-aksjer.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Samfunnsøkonomi</h3>
                     <p class="fag-beskrivelse">Samfunnsøkonomi handler om å forstå det
