Fikset breddeidrett-siden!
Mangler intro-tekst

--- a/idrettsfag/index.html
+++ b/idrettsfag/index.html
@@ -47,7 +47,7 @@
                     <p>Friluftsliv</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../programfag/breddeidrett/" class="fag_i_meny">
                     <img src="../assets/imgs/breddeidrett/forskjellige-baller.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Breddeidrett</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -70,17 +70,17 @@
                 <img src="../assets/imgs/friluftsliv/Tur-i-fjell-mye-sol.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Friluftsliv</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Friluftsliv handler om å gi deg erfaringer knyttet til turer og aktiviteter i naturen til ulike årstider. Samarbeid, innsats og fellesskap står sentralt i faget, sammen med det å flytte egne grenser og oppleve mestring gjennom opplevelser i naturen.</p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../programfag/friluftsliv/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Breddeidrett</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <p class="fag-sitat">«Skal du trene mye på det du ønsker å bli god i, eller hvis du ønsker å få gjort den jobben som kreves i idretten din, må du vite hvordan du kan holde deg skadefri.»</p>
+                    <a class ="fag-se-mer-knapp" href="../programfag/breddeidrett/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/breddeidrett/forskjellige-baller.png" class="fag-bilde">
             </div>
