Fikset bilder samfunnsøkonomi

--- a/programfag/samfunnsøkonomi/index.html
+++ b/programfag/samfunnsøkonomi/index.html
@@ -98,8 +98,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="PLaceholder">
-                    <img src="../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
+                    <img src="../../assets/imgs/samfunnsøkonomi/aksjekurs-skjerm.png" alt="Aksjekurser på en skjerm">
+                    <img src="../../assets/imgs/samfunnsøkonomi/håndhilsen-avtale-penger.png" alt="Håndhilsen etter avtale med penger i bakgrunnen">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -170,8 +170,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
-                    <img src="../../assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" alt="Placeholder">
+                    <img src="../../assets/imgs/samfunnsøkonomi/penger-krysset-ut-verdi.png" alt="Penger der verdien er krysset ut og erstattet med et lavere tall">
+                    <img src="../../assets/imgs/samfunnsøkonomi/tegning-graf-valuta.png" alt="Tegning av søylediagram med valuta">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
