Fikset alt-tekst og fjernet falske sitat fra forsidene

--- a/kda/index.html
+++ b/kda/index.html
@@ -53,12 +53,12 @@
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/arkitektur_og_samfunn/" class="fag_i_meny">
-                    <img src="../assets/imgs/arkitektur_og_samfunn/digital-skisse.jpg" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/arkitektur_og_samfunn/digital-skisse.jpg" alt="digital skisse" class="fagmeny_bilde">
                     <p>Arkitektur og samfunn</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/design_og_bærekraft/" class="fag_i_meny">
-                    <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" alt="redesign bukser og vesker" class="fagmeny_bilde">
                     <p>Design og bærekraft</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
