--- a/realfag/index.html
+++ b/realfag/index.html
@@ -43,42 +43,42 @@
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="../programfag/fysikk/" class="fag_i_meny">
-                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="fysikk-matte på tavle" class="fagmeny_bilde">
                     <p>Fysikk</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/kjemi/" class="fag_i_meny">
-                    <img src="../assets/imgs/kjemi/kjemiting.jpg" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/kjemi/kjemiting.jpg" alt="personer som driver med kjemi" class="fagmeny_bilde">
                     <p>Kjemi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/biologi/" class="fag_i_meny">
-                    <img src="../assets/imgs/biologi/dna_grønn.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/biologi/dna_grønn.png" alt="grønt dna" class="fagmeny_bilde">
                     <p>Biologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/informasjonsteknologi/" class="fag_i_meny">
-                    <img src="../assets/imgs/informasjonsteknologi/kode.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/informasjonsteknologi/kode.png" alt="html-kode" class="fagmeny_bilde">
                     <p>Informasjonsteknologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/tekforsk/" class="fag_i_meny">
-                    <img src="../assets/imgs/teknologi_og_forskningslære/greier.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/teknologi_og_forskningslære/greier.png" alt="elektronikk" class="fagmeny_bilde">
                     <p>Teknologi og forskningslære</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/geofag/" class="fag_i_meny">
-                    <img src="../assets/imgs/geofag/strand.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/geofag/strand.png" alt="strand" class="fagmeny_bilde">
                     <p>Geofag</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/r_matte/" class="fag_i_meny" class="matte-fag">
-                    <img src="../assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/matte_r/matte_r_placeholder.png" alt="funksjon på tavle" class="fagmeny_bilde">
                     <p>Matematikk-R</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/s_matte/" class="fag_i_meny" class="matte-fag">
-                    <img src="../assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/matte_s/matte_s_placeholder.png" alt="kalkulator og blyant" class="fagmeny_bilde">
                     <p>Matematikk-S</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -124,7 +124,7 @@
                     <!-- Endre info/tittel her -->
                     <h3 class="fag-tittel">IT</h3>
                     <p class="fag-beskrivelse">Informasjonsteknologi (IT) på Elvebakken er et spennende og praktisk fag hvor du får lære alt fra programmering og nettverk til spillutvikling og kunstig intelligens.</p>
-                    <p class="fag-sitat">"Beste shitten ever!" - Mann Med Langt Navn 2STD</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/informasjonsteknologi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/informasjonsteknologi/kode.png" class="fag-bilde">
@@ -134,7 +134,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Teknologi og forskningslære</h3>
                     <p class="fag-beskrivelse">Teknologi- og forskningslære på Elvebakken tar deg med inn i verden av innovasjon, teknologi og vitenskapelig utforskning. Dette faget gir deg et bredt perspektiv på teknologiske prinsipper og forskningsmetoder.</p>
-                    <p class="fag-sitat">"Quote." - Noen</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/tekforsk/">Se mer →</a>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Geofag</h3>
                     <p class="fag-beskrivelse">Geofag på Elvebakken tar deg med på en reise gjennom jordens mange lag og prosesser. Her vil du utforske de vitenskapelige prinsippene som ligger til grunn for forståelsen av jorden og dens geologiske, atmosfæriske og hydrologiske systemer.</p>
-                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/geofag/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/geofag/strand.png" class="fag-bilde">
@@ -152,7 +152,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Matematikk - R</h3>
                     <p class="fag-beskrivelse">Matematikk R på Elvebakken handler om å forstå moderne anvendelser av matematikk i realfaglige og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.</p>
-                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/r_matte/">Se mer →</a>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Matematikk - S</h3>
                     <p class="fag-beskrivelse">Matematikk S på Elvebakken er et fag som tar sikte på å gi elevene en inngående forståelse av moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne til å takle komplekse problemstillinger som oppstår i disse kontekstene.</p>
-                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/s_matte/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
