--- a/ssø/index.html
+++ b/ssø/index.html
@@ -43,72 +43,72 @@
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="../programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="../assets/imgs/entreprenørskap/handshake.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/entreprenørskap/handshake.png" alt="tar hverandre i hendene over en kontrakt" class="fagmeny_bilde">
                     <p>Entreprenørskap</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/engelsk/" class="fag_i_meny">
-                    <img src="../assets/imgs/engelsk/shakespear.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/engelsk/shakespear.png" alt="shakespear" class="fagmeny_bilde">
                     <p>Engelsk</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/hifi/" class="fag_i_meny">
-                    <img src="../assets/imgs/hifi/sokrates.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/hifi/sokrates.png" alt="sokrates" class="fagmeny_bilde">
                     <p>Historie og filosofi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/kinesisk2/" class="fag_i_meny">
-                    <img src="../assets/imgs/kinesisk2/flag.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/kinesisk2/flag.png" alt="kinesisk flagg" class="fagmeny_bilde">
                     <p>Kinesisk 2</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/markedsføring_og_ledelse/" class="fag_i_meny">
-                    <img src="../assets/imgs/markedsføring/rosa_megafon.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/markedsføring/rosa_megafon.png" alt="rosa megafon" class="fagmeny_bilde">
                     <p>Markedsføring og ledelse</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/pom/" class="fag_i_meny">
-                    <img src="../assets/imgs/pom/person_foran_gjerde.png" alt="freedom agget på en vegg" class="fagmeny_bilde">
+                    <img src="../assets/imgs/pom/person_foran_gjerde.png" alt="Person foran et gjerde" class="fagmeny_bilde">
                     <p>Politikk og menneskerettigheter</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/språk3/" class="fag_i_meny">
-                    <img src="../assets/imgs/språk3/spansk-flagg-vind.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/språk3/spansk-flagg-vind.png" alt="spansk flagg i vinden" class="fagmeny_bilde">
                     <p>Språk 3</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/psykologi/" class="fag_i_meny">
-                    <img src="../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="bilde psykologi" class="fagmeny_bilde">
+                    <img src="../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="fargerik hjerne illustrasjon" class="fagmeny_bilde">
                     <p>Psykologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/rettslære/" class="fag_i_meny">
-                    <img src="../assets/imgs/rettslære/placeholder_rettslære.jpg" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/rettslære/placeholder_rettslære.jpg" alt="lady justice" class="fagmeny_bilde">
                     <p>Rettslære</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/samfunnsgeografi/" class="fag_i_meny">
-                    <img src="../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="globus" class="fagmeny_bilde">
                     <p>Samfunnsgeografi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/samfunnsøkonomi/" class="fag_i_meny">
-                    <img src="../assets/imgs/samfunnsøkonomi/graf-aksjer.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/samfunnsøkonomi/graf-aksjer.png" alt="graf over aksjer" class="fagmeny_bilde">
                     <p>Samfunnsøkonomi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/sosiologi_og_sosialantropologi/" class="fag_i_meny">
-                    <img src="../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png" alt="statue som leser" class="fagmeny_bilde">
                     <p>Sosiologi og sosialantropologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/r_matte/" class="fag_i_meny" class="matte-fag">
-                    <img src="../assets/imgs/matte_r/matte_r_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/matte_r/matte_r_placeholder.png" alt="funksjon på tavle" class="fagmeny_bilde">
                     <p>Matematikk-R</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/s_matte/" class="fag_i_meny" class="matte-fag">
-                    <img src="../assets/imgs/matte_s/matte_s_placeholder.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/matte_s/matte_s_placeholder.png" alt="kalkulator og blyant" class="fagmeny_bilde">
                     <p>Matematikk-S</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
