--- a/idrettsfag/index.html
+++ b/idrettsfag/index.html
@@ -43,17 +43,17 @@
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="../programfag/friluftsliv/" class="fag_i_meny">
-                    <img src="../assets/imgs/friluftsliv/Tur-i-fjell-mye-sol.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/friluftsliv/Tur-i-fjell-mye-sol.png" alt="Tur i fjellet" class="fagmeny_bilde">
                     <p>Friluftsliv</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/breddeidrett/" class="fag_i_meny">
-                    <img src="../assets/imgs/breddeidrett/forskjellige-baller.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/breddeidrett/forskjellige-baller.png" alt="Forskjellige baller" class="fagmeny_bilde">
                     <p>Breddeidrett</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
                 <a href="../programfag/" class="fag_i_meny">
-                    <img src="../assets/imgs/e-sport/gutt-som-gamer.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="../assets/imgs/e-sport/gutt-som-gamer.png" alt="Gutt som gamer" class="fagmeny_bilde">
                     <p>E-sport</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -71,7 +71,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">Friluftsliv</h3>
                     <p class="fag-beskrivelse">Friluftsliv handler om å gi deg erfaringer knyttet til turer og aktiviteter i naturen til ulike årstider. Samarbeid, innsats og fellesskap står sentralt i faget, sammen med det å flytte egne grenser og oppleve mestring gjennom opplevelser i naturen.</p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/friluftsliv/">Se mer →</a>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <div class="fag-info">
                     <h3 class="fag-tittel">E-sport</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - Person</p>
+                    <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
                 </div>
             </div>
